Add happy music loop and selector wiring

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <button id="audioToggle" aria-pressed="false">🔊 Som</button>
       <button id="musicToggle" aria-pressed="false">🎵 Música</button>
       <label class="volume"><span>🔉</span><input id="volume" type="range" min="0" max="1" step="0.01" value="0.8"></label>
+      <label class="music-select">Música: <select id="musicSelect">
+        <option value="synth">Loop animado (sintetizado)</option>
+        <option value="twinkle">Twinkle Twinkle (canção infantil)</option>
+        <option value="happy">Happy Loop (animado)</option>
+        <option value="oldmac">Old MacDonald (canção infantil)</option>
+        <option value="wheels">Wheels On The Bus (canção infantil)</option>
+      </select></label>
     </div>
   </header>
 
