UI: mascot, hover microinteractions and hover sounds

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <option value="wheels">Wheels On The Bus (nursery)</option>
       </select></label>
     </div>
+      <div id="mascot" class="mascot" aria-hidden="true">🦊</div>
   </header>
 
   <main class="container">
