Add animated background canvas and vertical level layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
   <header class="top">
     <h1>Professor Ruben 🎓</h1>
     <p class="tag">Learn English while playing — tap to hear and choose!</p>
